--- a/src/sass/1-helpers/_mixins.sass
+++ b/src/sass/1-helpers/_mixins.sass
@@ -79,7 +79,6 @@
             padding-bottom: 5px
 
         &:nth-of-type(1)
-            width: 100%
             &:before
                 content: $date
 
