--- a/src/sass/2-elements/_svg.sass
+++ b/src/sass/2-elements/_svg.sass
@@ -2,3 +2,10 @@ svg
     margin: 5px
 path
     fill: $secondary
+    &:hover
+        fill: $hover
+        cursor: pointer
+.delete
+    &:hover
+        fill: $hazard
+        cursor: pointer
